# PayGPT

./: index.html  package.json  readme.md
backend/: .env  .gitignore  build.sh  db.sqlite3  pyproject.toml
backend/apps/accounts/: managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/ai/: models.py  prompts.py  serializers.py  service.py  urls.py  views.py
backend/apps/ai/migrations/: 0001_initial.py
backend/apps/invoice/: models.py  serializers.py  urls.py  views.py
backend/apps/invoice/migrations/: 0001_initial.py  0002_invoice_payment_reference.py
backend/apps/payments/: alatpay.py  models.py  urls.py  views.py
backend/apps/payments/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: .gitignore  package-lock.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: auth.ts  client.ts  invoices.ts
frontend/src/components/: app-sidebar.tsx  page-shell-home.tsx  protected-route.tsx  site-footer.tsx  site-header-home.tsx
frontend/src/routes/: chat.tsx  docs.tsx  index.tsx  invoices.tsx  login.tsx  payment-success.tsx  pricing.tsx  signup.tsx
frontend/src/utils/: auth.ts
src/: App.tsx
src/components/: page-shell.tsx  site-header.tsx
src/routes/: index.tsx  insights.tsx  payments.tsx
